# KyleCStructures

./: .KyleVimCSyntaxConfig  .gitignore  CMakeLists.txt  Doxyfile  Makefile  README.md  kyle_structs.pc.in
.github/: pull_request_template.md
.github/workflows/: ctest.yml
docs/: Doxyfile.in  README.md
docs/html/: annotated.html  classKyleCStructs_1_1Foo-members.html  classKyleCStructs_1_1Foo.html  classes.html  dir_000001_000000.html  dir_68267d1309a1af8e8297ef4c3efbcdba.html  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  foo_8cc.html  foo_8cc__incl.map  foo_8cc__incl.md5  foo_8h.html  foo_8h__dep__incl.map  foo_8h__dep__incl.md5  foo_8h_source.html  functions.html  functions_func.html  graph_legend.html  index.html  namespaceKyleCStructs.html  namespaces.html
docs/html/search/: all_0.js  all_2.js  classes_0.js  files_0.js  functions_0.js  namespaces_0.js  searchdata.js
docs/man/man3/: KyleCStructs.3  KyleCStructs_Foo.3  _home_kyle_Projects_KyleCStructures_include_.3  _home_kyle_Projects_KyleCStructures_src_.3  foo.cc.3  foo.h.3
include/: foo.h  kyle_exceptions.h
src/: foo.cc  kyle_exceptions.cc
test/: gtest_main.cc  test_foo.cc
